fixed styles for ping pong form
there were some overlapping classes.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -61,31 +61,31 @@ div#ping_pong_game_list
 
 div.ping_pong_game_list_item
   @extend .row
-
-div.ping_pong_player_one_name, div.ping_pong_player_two_name
-  @extend .small-3
-  @extend .medium-1
-  @extend .columns
-  @extend .nopadding
-
-div.ping_pong_player_one_name
-  @extend .small-offset-1
-  @extend .medium-offset-0
-  text-align: left
-
-div.ping_pong_player_two_name
-  @extend .left
-  text-align: right
-
-div.ping_pong_score
-  @extend .small-4
-  @extend .medium-2
-  @extend .columns
-  @extend .center
-  @extend .nopadding
-
-div.ping_pong_game_date
-  @extend .show-for-medium-up
-  @extend .medium-4
-  @extend .columns
+  
+  > div.ping_pong_player_one_name, div.ping_pong_player_two_name
+    @extend .small-3
+    @extend .medium-1
+    @extend .columns
+    @extend .nopadding
+  
+  > div.ping_pong_player_one_name
+    @extend .small-offset-1
+    @extend .medium-offset-0
+    text-align: left
+  
+  > div.ping_pong_player_two_name
+    @extend .left
+    text-align: right
+  
+  > div.ping_pong_score
+    @extend .small-4
+    @extend .medium-2
+    @extend .columns
+    @extend .center
+    @extend .nopadding
+  
+  > div.ping_pong_game_date
+    @extend .show-for-medium-up
+    @extend .medium-4
+    @extend .columns
 
